<resources>
    <string name="app_name">QuizTree</string>
    <string name="loading">Loading...</string>
    <string name="create_account">Don\'t have an account? Create one now</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_class">Class</string>
    <string name="hint_email">Email</string>
    <string name="create_acc">Create Account</string>
    <string name="login">Already a member? Login</string>
    <string name="email_enter">Enter email address!</string>
    <string name="pwd_enter">Enter password!</string>
    <string name="enter_name">Please enter your name!</string>
    <string name="enter_class">Enter your class!</string>
    <string name="valid_class">Enter valid grade between 1 to 12!</string>
    <string name="btn_login">Login</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="enter_email">Enter your registered email id</string>
    <string name="reset_pwd_msg">We have sent you instructions to reset your password!</string>
    <string name="reset_pwd_fail">Failed to send reset email!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">Topics</string>
    <string name="result">Result</string>
    <string name="loading_pd">Loading questions..</string>
    <string name="pls_wait">Please wait</string>
    <string name="action_settings">Settings</string>
    <string name="no_results">No Results</string>
    <string name="next">Next</string>
    <string name="log_out">Log out</string>
    <string name="message">You scored:</string>
    <string name="correct">Correct</string>
    <string name="keep_practicing">Keep Practicing</string>
    <string name="good_report">Bravo! Keep it going!!</string>
    <string name="bad_report">Need Practice!</string>
    <string name="Connection_unavailable">Internet Connection is NOT Available. Try agin later</string>
    <string name="widget_title">Your scores:</string>
    <array name="itemName">
        <item>Mathematics</item>
        <item>Science</item>
    </array>
    <array name="all_chapters">
        <item>Ratio and Proportion</item>
        <item>Decimals</item>
        <item>Biology</item>
        <item>Physics</item>
    </array>
    <array name="maths_chapters">
        <item>Ratio and Proportion</item>
        <item>Decimals</item>
    </array>
    <array name="science_chapters">
        <item>Biology</item>
        <item>Physics</item>
    </array>
</resources>
